src/request/remove-key/remove-key.css
.row {
    display: flex;
    flex-direction: row;
}

.row p {
    margin: 0;
}

.nq-text.nq-red {
    opacity: 1;
}

.warning-sign {
    width: 9.25rem;
    height: 9.25rem;
    flex-shrink: 0;
    margin-left: 4rem;
    align-self: flex-start;
}

.page#download-key-file .page-body {
    text-align: center;
}

.walletfile,
.walletfile-locked {
    width: 9rem;
    height: 11.75rem;
}

.page#remove-key .page-body button {
    margin: 2rem 2rem 0 0;
}

.privacy-agent .privacy-warning p {
    margin-bottom: 0;
}

.page#remove-key:not(.show-final-confirm) .final-confirm {
    display: none;
}

.page#remove-key.show-final-confirm .hide-for-final-confirm {
    display: none;
}

.page#download-key-file.show-download .hide-for-download {
    display: none
}

.page#download-key-file:not(.show-download) .download-key-file,
.page#download-key-file:not(.show-download) .back-to-remove {
    display: none;
}

.page-footer {
    padding: 1rem;
}

.page#remove-key .backup-option {
    display: flex;
    align-items: center;
    margin: 5rem 3rem 0;
}

.page#remove-ket .backup-option + .backup-option {
    margin-top: 3.75rem;
}

.page#remove-key .backup-option .login-file-svg-container,
.page#remove-key .backup-option img {
    min-width: 8.375rem;
    height: 14.744rem;
}

.page#remove-key .backup-option .login-file-svg-container svg {
    width: 100%;
    height: 100%;
}

.page#remove-key .backup-option > *:nth-child(2) {
    margin-left: 3rem;
}

.page#remove-key .page-body {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
}

